Client: - Fixed/improved diagram interaction on touch devices:   * zooming did not work on Android   * tools of selected links are always visible, not only on hover,     since hover does not make sense on touch devices.   * Increased sice of link tools.   * tap on blank space was not recognized.

--- a/WebContent/css/svgShapes.css
+++ b/WebContent/css/svgShapes.css
@@ -29,7 +29,15 @@ text {
  * Highlighting
  ******************************************/
 
-.precise.DependencyShape.highlighted .link-tools {
+/*
+ * Show all link tools on highlight rather than on hover,
+ * since hover does not make sense on touch devices.
+ */
+.precise.DependencyShape.highlighted .link-tools,
+.precise.DependencyShape.highlighted .marker-vertices,
+.precise.DependencyShape.highlighted .marker-vertex-remove,
+.precise.DependencyShape.highlighted .marker-vertex-remove-area,
+.precise.DependencyShape.highlighted .marker-arrowheads {
 	opacity: 1;
 }
 
